# GenAD

./: .gitignore  .travis.yml  LICENSE  README.md  index.html  md__r_e_a_d_m_e.html  md_paper.html  navtree.js  navtreeindex0.js  pages.html  paper.bib  paper.md
docs/: Doxyfile
docs/html/: README.md
paper/: paper.bib  paper.md
search/: all_0.js  search.js
src/: AutoDiffFwd.cpp  AutoDiffFwd.h  CMakeLists.txt  DerivCalc.cpp  DerivCalc.h  MMS_source.txt  Token.h  auto_diff.h  data.txt  data_fwd.txt  data_parser.txt  data_parser_eval.txt  data_rev.txt  example.txt  graph.py  main.cpp  parser.cpp  parser.h  shuntingyard.txt  sys.h  token.h
src/fileparser/: file_parser.cpp  file_parser.h  var_map.h
src/fwd/: AutoDiffFwd.cpp  AutoDiffFwd.h  DerivCalc.h  DerivCalcFwd.cpp  DerivCalcFwd.h
src/parse/: parser.cpp  parser.h
src/rev/: AutoDiffRev.cpp  AutoDiffRev.h  Node.h  TokenRev.h
src/test/: complexity.cpp  complexity.h
src/token/: Token.h
test/: CMakeLists.txt  GenADTests.cpp  coverage.sh  test.cpp
